Add endpoint for customer list

--- a/api/Motocomplex/appsettings.json
+++ b/api/Motocomplex/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "MotocomplexConnectionString": "Server=(localdb)\\mssqllocaldb;Database=MotocomplexDb;Trusted_Connection=True;"
   },
+  "Sieve": {
+    "DefaultPageSize": 40,
+    "MaxPageSize": 40
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
