--- a/api/Motocomplex/appsettings.json
+++ b/api/Motocomplex/appsettings.json
@@ -6,10 +6,44 @@
     "DefaultPageSize": 40,
     "MaxPageSize": 40
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": "Error",
+    "Enrich": [ "WithMachineName" ],
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "MotocomplexConnectionString",
+          "tableName": "ErrorLogs",
+          "needAutoCreateTable": true
+        }
+      }
+    ]
+  },
+  "Columns": {
+    "message": "RenderedMessageColumnWriter",
+    "message_template": "MessageTemplateColumnWriter",
+    "level": {
+      "Name": "LevelColumnWriter",
+      "Args": {
+        "renderAsText": true,
+        "dbType": "Varchar"
+      }
+    },
+    "raise_date": "TimestampColumnWriter",
+    "exception": "ExceptionColumnWriter",
+    "properties": "LogEventSerializedColumnWriter",
+    "props_test": {
+      "Name": "PropertiesColumnWriter",
+      "Args": { "dbType": "Json" }
+    },
+    "machine_name": {
+      "Name": "SinglePropertyColumnWriter",
+      "Args": {
+        "propertyName": "MachineName",
+        "writeMethod": "Raw"
+      }
     }
   },
   "AllowedHosts": "*"
