Configure appsettings for serilog

--- a/api/Motocomplex/appsettings.json
+++ b/api/Motocomplex/appsettings.json
@@ -16,32 +16,33 @@
         "Args": {
           "connectionString": "MotocomplexConnectionString",
           "tableName": "ErrorLogs",
-          "needAutoCreateTable": true
+          "autoCreateSqlTable": true
         }
       }
     ]
   },
   "Columns": {
-    "message": "RenderedMessageColumnWriter",
-    "message_template": "MessageTemplateColumnWriter",
+    "message": "RenderedMessage",
+    "message_template": "MessageTemplate",
     "level": {
-      "Name": "LevelColumnWriter",
+      "Name": "Level",
       "Args": {
         "renderAsText": true,
         "dbType": "Varchar"
       }
     },
-    "raise_date": "TimestampColumnWriter",
-    "exception": "ExceptionColumnWriter",
-    "properties": "LogEventSerializedColumnWriter",
+    "raise_date": "Timestamp",
+    "exception": "Exception",
+    "properties": "Properties",
     "props_test": {
-      "Name": "PropertiesColumnWriter",
-      "Args": { "dbType": "Json" }
+      "Name": "Properties",
+      "Args": { "dbType": "Xml" }
     },
     "machine_name": {
-      "Name": "SinglePropertyColumnWriter",
+      "Name": "Column",
       "Args": {
-        "propertyName": "MachineName",
+        "columnName": "MachineName",
+        "propertyValue": "MachineName",
         "writeMethod": "Raw"
       }
     }
