--- a/api/Motocomplex/Motocomplex.csproj
+++ b/api/Motocomplex/Motocomplex.csproj
@@ -22,6 +22,7 @@
 		<PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.3.0" />
 		<PackageReference Include="Sieve" Version="2.5.5" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.12" />
 	</ItemGroup>
 
 </Project>
