Add logging to console

--- a/api/Motocomplex/appsettings.json
+++ b/api/Motocomplex/appsettings.json
@@ -7,8 +7,7 @@
     "MaxPageSize": 40
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.MSSqlServer" ],
-    "MinimumLevel": "Error",
+    "Using": [ "Serilog.Sinks.MSSqlServer", "Serilog.Sinks.Console" ],
     "Enrich": [ "WithMachineName" ],
     "WriteTo": [
       {
@@ -17,7 +16,15 @@
           "connectionString": "MotocomplexConnectionString",
           "tableName": "ErrorLogs",
           "autoCreateSqlTable": true
-        }
+        },
+        "MinimumLevel": "Error"
+      },
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+        },
+        "MinimumLevel": "Information"
       }
     ]
   },
