--- a/api/Motocomplex/Motocomplex.csproj
+++ b/api/Motocomplex/Motocomplex.csproj
@@ -20,6 +20,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Serilog.AspNetCore" Version="7.0.1-dev-00320" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
 		<PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.3.0" />
 		<PackageReference Include="Sieve" Version="2.5.5" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
