Split informations per sink

--- a/api/Motocomplex/appsettings.json
+++ b/api/Motocomplex/appsettings.json
@@ -15,16 +15,16 @@
         "Args": {
           "connectionString": "MotocomplexConnectionString",
           "tableName": "ErrorLogs",
-          "autoCreateSqlTable": true
-        },
-        "MinimumLevel": "Error"
+          "autoCreateSqlTable": true,
+          "restrictedToMinimumLevel": "Error"
+        }
       },
       {
         "Name": "Console",
         "Args": {
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
-        },
-        "MinimumLevel": "Information"
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "restrictedToMinimumLevel": "Information"
+        }
       }
     ]
   },
